href and press footer

--- a/pages/press.html
+++ b/pages/press.html
@@ -12,7 +12,7 @@
 
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-            <a class="Yokato" href=""> 
+            <a class="Yokato" href="/index.html"> 
                 <img src="../img/Yokato Logo.png" alt="Yokato Yokabai Ramen" height="100px" width="100px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">PRESS</a>
+                    <a  class="nav-link" href="/pages/press.html">PRESS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link">Contact</a>
@@ -49,9 +49,9 @@
         <main class="container">
             <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
               <div class="col-md-6 px-0">
-                <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
-                <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-                <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
+                <h1 class="display-4 fst-italic">"The Montreal Ramen Restaurant That Will Literally Blow Your Mind."</h1>
+                <p class="lead my-3">Yokato Yokabai in the Plateau, the ramen soup at this place will blow your mind!</p>
+                <p class="lead mb-0"><a href="https://www.mtlblog.com/the-plateau-ramen-restaurant-that-will-literally-blow-your-mind" class="text-white fw-bold">Continue reading...</a></p>
               </div>
             </div>
           
@@ -144,8 +144,25 @@
                     </div>
                 </div>
             </div>
-              
         </main>
+        <section class="news py-4">
+            <div class="container py-4">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <img width="70%" src="../img/Yokato Logo White.png" alt="Yokato Yokabai Logo">
+                    </div>
+                    <div class="col-lg-9  m-auto text-center">
+                        <h3>Do You Want To Know More About Ramen?</h3>
+                        <input type="email" placeholder="Enter Your Email">
+                        <button class="btn2">Join Now</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <footer class="footer text-center">
+            <h6>Design by Ana Luiza Marques - Greystone Project</h6>
+        </footer>
 
     </body>
 </html>
