--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a  class="nav-link" href="../pages/press.html">PRESS</a>
+                    <a  class="nav-link" href="./pages/press.html">PRESS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link">Contact</a>
