--- a/pages/press.html
+++ b/pages/press.html
@@ -12,7 +12,7 @@
 
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-            <a class="Yokato" href="/index.html"> 
+            <a class="Yokato" href="../index.html"> 
                 <img src="../img/Yokato Logo.png" alt="Yokato Yokabai Ramen" height="100px" width="100px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a  class="nav-link" href="/pages/press.html">PRESS</a>
+                    <a  class="nav-link" href="/pages/press.html">Press</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link">Contact</a>
