Corrections and improvements

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
 
         <section class="new">
-            <div class="container py-5">
+            <div class="container py-3">
                 <div class="row pt-5">
                     <div class="col-lg-7 m-auto">
                         <div class="row text-center">
@@ -81,7 +81,7 @@
         </section>
 
         <section class="about">
-            <div class="container py-5">
+            <div class="container py-3">
                 <div class="row py-5">
                     <div class="col-lg-8 m-auto text-center">
                         <h3>Welcome To The Gratest Ramen of Montreal</h3>
@@ -93,21 +93,21 @@
                     <div class="col-lg-4">
                         <img src="./img/yoka-steaming-bowl-of-ramen.jpg" class="img-fluid mb-3" alt="">
                         <h5>Vegan, Vegetarian and No-Vegan Ramens</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae repudiandae praesentium dolorem voluptatem nemo sunt laboriosam natus voluptas!</p>
+                        <p>Choose between vegan, vegetarian, or non-vegan ramen! It comes down to your personal preference. We can offer delicious and satisfying options for all noodle soup lovers.</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="./img/yoka-bento.jpg" class="img-fluid mb-3" alt="">
                         <h5>Awesome side dishes and drinks</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae repudiandae praesentium dolorem voluptatem nemo sunt laboriosam natus voluptas!</p>
+                        <p>Doesn't matter if you just want Ramen or if you want a perfect starter and drinks to match it! We have all! See more in our incredible menu!</p>
                     </div>
                     <div class="col-lg-4">
                         <img src="./img/yoka-ramen-noodles-made-in-house.jpg" class="img-fluid mb-3" alt="">
-                        <h5>Family Pasta Receipt</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae repudiandae praesentium dolorem voluptatem nemo sunt laboriosam natus voluptas!</p>
+                        <h5>House-made pasta</h5>
+                        <p>In addition to organic and fresh products, we also make in-house noodles! All these ingredients combine in our perfect Yokato Yokabai Ramen. Try Now!</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 text-center m-auto">
+                    <div class="col-lg-6 text-center m-auto py-5">
                         <button class="btn1">See Menu</button>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                 <div class="row py-5">
                     <div class="col-lg-6">
                         <h2 class="font-weight-bold py-3"> See what they're saying about us</h2>
-                        <button class="btn1 mt-3">Find Out More!</button>
+                        <button href="./pages/press.html" class="btn1 mt-3">Find Out More!</button>
                     </div>
                 </div>
             </div>
@@ -146,7 +146,6 @@
 
                             <a style="cursor: pointer;"><img src="./img/facebook-icon.png" width="13%"></a>
                             <a style="cursor: pointer;"><img src="./img/instagram-icon.png" width="13%"></a>
-                            <a style="cursor: pointer;"><img src="./img/twitter-logo.png" width="13%"></a>
                         </div>
                         
 
@@ -203,7 +202,7 @@
             </div>
 
         </section>
-        <footer class="footer text-center">
+        <footer class="footer text-center py-2">
             <h6>Design by Ana Luiza Marques - Greystone Project</h6>
         </footer>
     </body>
