--- a/pages/press.html
+++ b/pages/press.html
@@ -160,7 +160,7 @@
             </div>
 
         </section>
-        <footer class="footer text-center">
+        <footer class="footer text-center py-2">
             <h6>Design by Ana Luiza Marques - Greystone Project</h6>
         </footer>
 
