--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Yokato Yokabai</title>
+        <link rel="icon" type="image/x-icon" href="./img/Yokato-Favicon.png">
+        <meta name="description" content="Looking for the best ramen in Montreak? Look no further than our authentic ramen house! From savory tonkotsu to spicy miso, we offer a range of mouth-watering options that are sure to satisfy your cravings. Our noodles are handmade daily using only the finest ingredients, and our broth is slow-cooked to perfection for maximum flavor. Come experience the taste of Japan right here in our cozy restaurant, and discover why we're the go-to spot for ramen lovers everywhere.">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/styles.css"/>
     </head>
@@ -50,7 +53,7 @@
             <div class="container py-5">
                 <div class="row py-2">
                     <div class="col-lg-7 pt-5 text-center">
-                        <h1 >The Best Ramen is here at Yokato Yokabai!</h1>
+                        <h1 font-weight-bold >Yokato Yokabai: Discover the Best Ramen in Montreal at Our Authentic Ramen House</h1>
                         <button class="btn1 mt-3">Reserve Now</button>
                     </div>
                 </div>
@@ -91,17 +94,17 @@
 
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="./img/yoka-steaming-bowl-of-ramen.jpg" class="img-fluid mb-3" alt="">
+                        <img src="./img/yoka-steaming-bowl-of-ramen.jpg" class="img-fluid mb-3" alt="Yokabai Ramen Bowl">
                         <h5>Vegan, Vegetarian and No-Vegan Ramens</h5>
                         <p>Choose between vegan, vegetarian, or non-vegan ramen! It comes down to your personal preference. We can offer delicious and satisfying options for all noodle soup lovers.</p>
                     </div>
                     <div class="col-lg-4">
-                        <img src="./img/yoka-bento.jpg" class="img-fluid mb-3" alt="">
+                        <img src="./img/yoka-bento.jpg" class="img-fluid mb-3" alt="Yokabai Bento dish">
                         <h5>Awesome side dishes and drinks</h5>
                         <p>Doesn't matter if you just want Ramen or if you want a perfect starter and drinks to match it! We have all! See more in our incredible menu!</p>
                     </div>
                     <div class="col-lg-4">
-                        <img src="./img/yoka-ramen-noodles-made-in-house.jpg" class="img-fluid mb-3" alt="">
+                        <img src="./img/yoka-ramen-noodles-made-in-house.jpg" class="img-fluid mb-3" alt="Yokato Ramen Noodles">
                         <h5>House-made pasta</h5>
                         <p>In addition to organic and fresh products, we also make in-house noodles! All these ingredients combine in our perfect Yokato Yokabai Ramen. Try Now!</p>
                     </div>
@@ -144,8 +147,8 @@
                             <h6>PHONE</h6>
                             <p>(514) 282-9991</p>
 
-                            <a style="cursor: pointer;"><img src="./img/facebook-icon.png" width="13%"></a>
-                            <a style="cursor: pointer;"><img src="./img/instagram-icon.png" width="13%"></a>
+                            <a style="cursor: pointer;"><img src="./img/facebook-icon.png" width="13%" alt="Facebook Icon"></a>
+                            <a style="cursor: pointer;"><img src="./img/instagram-icon.png" width="13%" alt="Instagram Icon"></a>
                         </div>
                         
 
@@ -203,7 +206,7 @@
 
         </section>
         <footer class="footer text-center py-2">
-            <h6>Design by Ana Luiza Marques - Greystone Project</h6>
+            <h6>Design by Ana Luiza Marques - Greystone - SEO Project</h6>
         </footer>
     </body>
 </html>
