--- a/pages/press.html
+++ b/pages/press.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Press</title>
+        <link rel="icon" type="image/x-icon" href="../img/Yokato-Favicon.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/styles.css"/>
     </head>
@@ -161,7 +163,7 @@
 
         </section>
         <footer class="footer text-center py-2">
-            <h6>Design by Ana Luiza Marques - Greystone Project</h6>
+            <h6>Design by Ana Luiza Marques - Greystone - SEO Project</h6>
         </footer>
 
     </body>
