--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Yokato Yokabai</title>
         <link rel="icon" type="image/x-icon" href="./img/Yokato-Favicon.png">
-        <meta name="description" content="Looking for the best ramen in Montreak? Look no further than our authentic ramen house! From savory tonkotsu to spicy miso, we offer a range of mouth-watering options that are sure to satisfy your cravings. Our noodles are handmade daily using only the finest ingredients, and our broth is slow-cooked to perfection for maximum flavor. Come experience the taste of Japan right here in our cozy restaurant, and discover why we're the go-to spot for ramen lovers everywhere.">
+        <link rel="canonical">
+        <meta name="description" content="Looking for the best ramen in Montreal? Look no further than our authentic ramen house! Our noodles are handmade daily using only the finest ingredients, and our broth is slow-cooked to perfection for maximum flavour. Come experience the taste of Japan right here in our restaurant.">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/styles.css"/>
     </head>
